feat: 完成邮箱发送、JWT生成TOKEN、Bcrypt加密等核心功能。完成发送验证码、注册API。

--- a/config.yaml.template
+++ b/config.yaml.template
@@ -22,4 +22,13 @@ database:
   driver: mysql
   migrate: true
   # use dsn
-  dsn: root:123456@tcp(localhost:3307)/island?charset=utf8mb4&parseTime=True&loc=Local&timeout=1000ms
+  dsn: root:123456@tcp(localhost:3307)/acking?charset=utf8mb4&parseTime=True&loc=Local&timeout=1000ms
+
+email:
+  host: smtp.163.com
+  port: 25
+  username: ***.com
+  password: ***
+
+jwt:
+  secret: ***
